--- a/App/src/styles/homepage.scss
+++ b/App/src/styles/homepage.scss
@@ -1,5 +1,20 @@
-// @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;700&display=swap");
-@import url('https://fonts.cdnfonts.com/css/be-vietnam-pro');
+
+@font-face {
+  font-family: 'Be Vietnam Pro';
+  font-style: normal;
+  font-weight: 400; /* Regular */
+  font-display: swap;
+  src: url('/fonts/be-vietnam-pro-v11-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Be Vietnam Pro';
+  font-style: normal;
+  font-weight: 700; /* Bold */
+  font-display: swap;
+  src: url('/fonts/be-vietnam-pro-v11-latin-700.woff2') format('woff2');
+}
+
 html,
 body {
   margin: 0;
