--- a/App/src/styles/event.scss
+++ b/App/src/styles/event.scss
@@ -193,6 +193,9 @@
   gap: 20px;
   justify-content: center;
   margin: 20px;
+  flex-direction: row;
+  width: 100%;
+  padding-top: 2rem;
 }
 
 .img-div {
