--- a/App/src/styles/event.scss
+++ b/App/src/styles/event.scss
@@ -18,15 +18,15 @@
   // text-align: center;
   // height: 100vh;
   position: absolute;
-    width: 70%;
-    background: rgba(0, 0, 0, 0.8);
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
-    padding: 40px;
-    box-sizing: border-box;
-    text-align: center;
-    min-height: 100vh;
-    top: 3rem;
+  width: 70%;
+  background: rgba(0, 0, 0, 0.8);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  padding: 40px;
+  box-sizing: border-box;
+  text-align: center;
+  min-height: 100vh;
+  top: 3rem;
 
   @media screen and (max-width: 767px) {
     margin-top: 20px; /* Décalage pour éloigner la boîte du header */
@@ -271,14 +271,14 @@
     width: 100% !important;
   }
   .event__files-section {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-    margin: 20px;
-    flex-direction: row;
-    width: 100%;
-    padding-top: 2rem;
+    display: flex !important;
+    flex-wrap: wrap !important;
+    gap: 20px !important;
+    justify-content: center !important;
+    margin: 20px !important;
+    flex-direction: row !important;
+    width: 100% !important;
+    padding-top: 2rem !important;
   }
 }
 
