:adesive_bandage: fix event file section ersponsive

--- a/App/src/styles/modale.scss
+++ b/App/src/styles/modale.scss
@@ -37,6 +37,9 @@
 .modale__content {
   padding: 40px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .modale__title {
