--- a/App/src/styles/event.scss
+++ b/App/src/styles/event.scss
@@ -280,6 +280,14 @@
     width: 100% !important;
     padding-top: 2rem !important;
   }
+  .img-div {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+  }
 }
 
 .event__photoslist {
