--- a/App/src/styles/modale.scss
+++ b/App/src/styles/modale.scss
@@ -70,3 +70,13 @@
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 767px) {
+  .modale__content {
+    padding: 40px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
